feat: Add new simple actor character sheet template
- Introduced a new simple character sheet template for actors, enhancing user experience with a clean layout and organized tabs for characteristics, features, inventory, and biography.
- Updated existing actor character sheet to improve navigation and structure, including better handling of characteristics and features.
- Refactored item templates for better organization and added new item sheets for art, competence, domain, and voie.
- Implemented a validation script for Handlebars templates to ensure template integrity and catch errors early in the development process.

--- a/lang/en.json
+++ b/lang/en.json
@@ -57,7 +57,26 @@
       "Magic": "Magic",
       "Inventory": "Inventory",
       "Features": "Features",
+      "Competences": "Competences",
       "Spells": "Spells"
+    },
+    "NoVoie": "No Path Selected",
+    "XP": {
+      "label": "Experience Points",
+      "unspent": "Unspent XP",
+      "total": "Total XP",
+      "spent": "Spent XP"
+    },
+    "Grade": {
+      "label": "Grade",
+      "I": "I",
+      "II": "II",
+      "III": "III",
+      "IV": "IV",
+      "V": "V"
+    },
+    "Competence": {
+      "Unique": "Unique Ability"
     },
     "Effect": {
       "Source": "Source",
