Refactor Myriad System: Unify features and competencies, enhance character sheet layout, and improve health and XP calculations
- Updated CSS styles for character display, resources, and modifiers.
- Changed language keys from "Capacité" to "Trait" for consistency.
- Removed competence item class and merged functionality into feature class.
- Implemented health calculation based on Puissance and bonus in character class.
- Added XP control functionality for increasing and decreasing earned XP.
- Adjusted actor sheet to reflect changes in features and competencies.
- Enhanced item feature sheet with level, grade, XP cost, and associated characteristic fields.
- Updated templates to reflect the new structure and improved user interface.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -15,7 +15,7 @@
     },
     "ItemType": {
       "item": "Objet",
-      "feature": "Capacité",
+      "feature": "Trait",
       "spell": "Sort",
       "domain": "Domaine",
       "art": "Art",
@@ -56,7 +56,7 @@
       "Characteristics": "Caractéristiques",
       "Magic": "Magie",
       "Inventory": "Inventaire",
-      "Features": "Capacités",
+      "Features": "Traits",
       "Competences": "Compétences",
       "Spells": "Sorts"
     },
@@ -76,7 +76,7 @@
       "V": "V"
     },
     "Competence": {
-      "Unique": "Capacité Unique"
+      "Unique": "Trait Unique"
     },
     "Effect": {
       "Source": "Source",
@@ -94,7 +94,7 @@
     },
     "Item": {
       "item": "Objet",
-      "feature": "Capacité",
+      "feature": "Trait",
       "spell": "Sort"
     }
   }
