feat: Add features and prerequisites management to character sheets
- Introduced new SCSS styles.
- Updated forms to include fields for XP cost, passive abilities, and tags.
- Refactored character sheet templates to integrate new features and display them correctly.
- Removed the old simple character sheet template and replaced it with an updated version that supports the new structure.
- Enhanced item templates to manage benefits, drawbacks, and prerequisites effectively.

--- a/lang/en.json
+++ b/lang/en.json
@@ -84,6 +84,23 @@
       "Temporary": "Temporary Effects",
       "Passive": "Passive Effects",
       "Inactive": "Inactive Effects"
+    },
+    
+    "UI": {
+      "Add": "Add",
+      "Delete": "Delete",
+      "AddPrerequisite": "Add Prerequisite"
+    },
+    
+    "ItemAttributes": {
+      "Grade": "Grade",
+      "XPCost": "XP Cost",
+      "IsPassive": "Passive Ability",
+      "Tags": "Tags",
+      "TagsHint": "Separated by commas (combat, social, arcane...)",
+      "Benefits": "Benefits",
+      "Drawbacks": "Drawbacks",
+      "Acquisition": "Acquisition"
     }
   },
 
